<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_background"
        android:elevation="2dp"
        android:padding="10dp"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textColor="@color/question_color"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_option1_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q1_option1"
                    android:textColor="@color/option_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_option2_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q1_option2"
                    android:textColor="@color/option_color"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_option3_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/q1_option3"
                    android:textColor="@color/option_color"
                    android:textSize="16sp" />

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textColor="@color/question_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_option1_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option1"
                    android:textColor="@color/option_color"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkbox_option2_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option2"
                    android:textColor="@color/option_color"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/checkbox_option3_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2_option3"
                    android:textColor="@color/option_color"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_grey"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/reset_color"
            android:onClick="onResetClicked"
            android:padding="10dp"
            android:text="@string/reset" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/submit_color"
            android:onClick="onSubmitClicked"
            android:padding="10dp"
            android:text="@string/submit" />

    </LinearLayout>

</RelativeLayout>